--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@
             <li>About uber Eats</li>
             <li>Shoup groceries</li>
         </ul>
+        <div class="english">
+            <img src="/image/eng.svg" alt="logo" width="16px" height="16px">
+            <ul>English</ul>
+        </div>
+
       </div>
 
       <div class="apple-play">
@@ -181,6 +186,29 @@
             <img src="/image/play.png" alt="">
         </div>
       </div>
+
+      <div class="footer">
+        <div class="footer-left">
+     <img src="/image/face.svg" alt="logo" width="16px" height="16px">
+     <img src="image/twitter.svg" alt="logo" width="16px" height="16px">
+     <img src="image/insta.svg" alt="logo" width="16px" height="16px">
+     </div>
+<div class="right-footer">
+    <ul class="policy">
+        <li>Privacy Policy</li>
+        <li>Terms</li>
+       <li>Pricing</li> 
+       <li>Do not sell or share my personal information</li>
+    </ul>
+    <ul class="terms">
+        <li>This site is protected by reCAPTCHA and the Google Privicy Policy and Terms of service apply</li>
+    
+    </ul>
+    <div class="last-footer">
+  <span>&copy;2024 uber Technologies inc</span>
+
+</div>
+        </div>
     
 </body>
 </html>
